--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "acorn": "^7.1.1",
     "cross-env": "^6.0.3",
     "electron": "^7.1.9",
     "electron-builder": "^22.2.0",
     "electron-is-dev": "^1.1.0",
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
