--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "minimist": "^1.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "wait-on": "^3.3.0"
   },
   "scripts": {
